welcome.lessons.welcome.variables.Variables.scala.error
Variables:6: error: illegal start of statement
if (estFaceMur == false) avance;.
                                ^