welcome.lessons.welcome.variables.Variables.scala.code
while (estSurBiscuit == false) avance;
porteBiscuit;
gauche;
gauche;
if (estFaceMur == false) avance;.
